--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
     }
 
     const snowballImg = new Image();
-    snowballImg.src = 'boule-de-neige.jpg';
+    snowballImg.src = 'boule-de-neige.png';
 
     const comingBubbleImg = new Image();
     comingBubbleImg.src = 'dexscreener-bubble.png'; // ton logo Dexscreener
